--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = svv
 
-INCLUDES = @LIBV4L_CFLAGS@ @GTK_CFLAGS@
-LIBS= @LIBV4L_LIBS@ @GTK_LIBS@
+INCLUDES = @LIBV4L_CFLAGS@ @GLIB_CFLAGS@ @GTK_CFLAGS@ @CACA_CFLAGS@
+LIBS= @LIBV4L_LIBS@ @GLIB_LIBS@ @GTK_LIBS@ @CACA_LIBS@
 
 svv_SOURCES = svv.c
 
